# ainft-py

./: README.md  pyproject.toml
ainft/: __init__.py  client.py  types.py  utils.py
ainft/chat/: chat.py  messages.py  threads.py
tests/: data.py  test_client.py  test_messages.py  test_threads.py  test_utils.py
tools/: thread.py
