[tool.poetry]
name = "ainft-py"
version = "0.1.0"
description = ""
authors = ["AINFT Team <dev@ainetwork.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
ain-py = "^1.0.3"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
